--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
     <title>Hire Pedro Oliveira</title>
+
+    <link href='http://fonts.googleapis.com/css?family=Muli:400' rel='stylesheet' type='text/css'>
 
     <style>
     body {
@@ -13,15 +15,25 @@
       background-size: cover;
       text-align: center;
       color: white;
-      font-family: 'Helvetica Neue';
+      font-family: 'Helvetica Neue', Serif;
     }
     img {
       margin: 0 auto;
-      height: 200px;
+      height: 180px;
+      margin-top: 25px;
+    }
+    h1 {
+      text-transform: uppercase;
+    }
+    h1, h2, h3, big {
+      font-family: 'Muli', Serif;
     }
     .container {
       margin: 0 auto;
-      max-width: 700px;
+      max-width: 600px;
+    }
+    .pedro-title {
+      margin-top: 0;
     }
     </style>
 
@@ -33,12 +45,12 @@
   </head>
   <body>
   <div class="container">
-    <img src="pedro.png" alt="">
-    <h1>Entreprenuer in Residence</h1>
-    <h2>Pedro Oliveira</h2>
-    <p>Co-Founder JOBBOX.io</p>
-    <h2>Improve your tech hiring process <br> and source great talent</h2>
-    <p>What's this all about , eh?</p>
+    <img src="pedro.png" alt="Pedro Carmo">
+    <h1>Entrepreneur in Residence</h1>
+    <big>Pedro Oliveira</big>
+    <p class="pedro-title">Co-Founder JOBBOX.io</p>
+    <em><h2>Improve your tech hiring process <br> and source great talent</h2></em>
+    <p><strong>What's this all about, eh?</strong></p>
     <p>I'm moving to London to build out a presence for JOBBOX.io, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
     <button>Book Pedro Today</button>
