--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
     .pedro-title {
       margin-top: 0;
     }
+    .btn {  
+      background: #79c691;
+      padding: 15px 40px 15px 15px;
+      text-transform: capitalize;
+      text-decoration: none;
+      font-family: 'Helvetica Neue';
+      font-size: 18px;
+      font-weight: 100;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      border-right-style: 2px;
+      top: 10px;
+      position: relative;
+      background-image: url('mail.png');
+      background-repeat: no-repeat;
+      background-position: 155px 16px;
+    }
     </style>
 
 
@@ -53,7 +71,7 @@
     <p><strong>What's this all about, eh?</strong></p>
     <p>I'm moving to London to build out a presence for JOBBOX.io, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
-    <button>Book Pedro Today</button>
+    <a class="btn" href="mailto:pcbo@jobbox.io?subject=Booking @pcbo">Book Pedro Today</a>
   </div>
   </body>
 </html>
