--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-size: cover;
       text-align: center;
       color: white;
-      font-family: 'Helvetica Neue', Serif;
+      font-family: 'Helvetica Neue', Helvetica, Arial;
     }
     img {
       margin: 0 auto;
@@ -26,11 +26,12 @@
       text-transform: uppercase;
     }
     h1, h2, h3, big {
-      font-family: 'Muli', Serif;
+      font-family: 'Muli', Helvetica, Arial;
     }
     .container {
       margin: 0 auto;
       max-width: 600px;
+      margin-bottom: 60px;
     }
     .pedro-title {
       margin-top: 0;
@@ -40,7 +41,7 @@
       padding: 15px 40px 15px 15px;
       text-transform: capitalize;
       text-decoration: none;
-      font-family: 'Helvetica Neue';
+      font-family: 'Helvetica Neue', Helvetica, Arial;
       font-size: 18px;
       font-weight: 100;
       color: white;
@@ -49,9 +50,17 @@
       border-right-style: 2px;
       top: 10px;
       position: relative;
-      background-image: url('mail.png');
+      background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 155px 16px;
+      background-position: 160px 18px;
+      width: 195px;
+    }
+    .btn span {
+      border-left: 2px solid #75c08d;
+      height: 51px;
+      margin-top: -15px;
+      margin-left: 5px;
+      position: absolute;
     }
     </style>
 
@@ -71,7 +80,7 @@
     <p><strong>What's this all about, eh?</strong></p>
     <p>I'm moving to London to build out a presence for JOBBOX.io, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
-    <a class="btn" href="mailto:pcbo@jobbox.io?subject=Booking @pcbo">Book Pedro Today</a>
+    <a class="btn" href="mailto:pcbo@jobbox.io?subject=Booking @pcbo">Book Pedro Today <span>&nbsp;</span></a>
   </div>
   </body>
 </html>
