change icon, improve some css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     h1, h2, h3, big {
       font-family: 'Muli', Helvetica, Arial;
     }
+    a {
+      color: #79c691;
+      text-decoration: none;
+    }
     .container {
       margin: 0 auto;
       max-width: 600px;
@@ -38,7 +42,7 @@
     }
     .btn {  
       background: #79c691;
-      padding: 15px 40px 15px 15px;
+      padding: 15px 50px 15px 15px;
       text-transform: capitalize;
       text-decoration: none;
       font-family: 'Helvetica Neue', Helvetica, Arial;
@@ -47,19 +51,30 @@
       color: white;
       border: none;
       border-radius: 8px;
-      border-right-style: 2px;
       top: 10px;
       position: relative;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 160px 18px;
-      width: 195px;
+      background-position: 169px 16px;
     }
     .btn span {
-      border-left: 2px solid #75c08d;
+      border-left: 2px solid #55b873;
       height: 51px;
       margin-top: -15px;
-      margin-left: 5px;
+      margin-left: 9px;
+      position: absolute;
+    }
+    .btn:hover {  
+      background: #67bf82;
+      background-image: url('icon.png');
+      background-repeat: no-repeat;
+      background-position: 169px 16px;
+    }
+    .btn:hover span {
+      border-left: 2px solid #48ac67;
+      height: 51px;
+      margin-top: -15px;
+      margin-left: 9px;
       position: absolute;
     }
     </style>
@@ -78,7 +93,7 @@
     <p class="pedro-title">Co-Founder JOBBOX.io</p>
     <em><h2>Improve your tech hiring process <br> and source great talent</h2></em>
     <p><strong>What's this all about, eh?</strong></p>
-    <p>I'm moving to London to build out a presence for JOBBOX.io, and want to roll up my sleeves and understand what's really happening on the ground.</p>
+    <p>I'm moving to London to build out a presence for <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a>, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
     <a class="btn" href="mailto:pcbo@jobbox.io?subject=Booking @pcbo">Book Pedro Today <span>&nbsp;</span></a>
   </div>
