html min height

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href='http://fonts.googleapis.com/css?family=Muli:400' rel='stylesheet' type='text/css'>
 
     <style>
+    html {
+      min-height: 100%;
+    }
     body {
       background-image: url('landingpage.jpg');
       background-size: cover;
