--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
       margin: 0 auto;
       max-width: 600px;
       margin-bottom: 60px;
+      padding-top: 2em;
     }
     .pedro-title {
       margin-top: 0;
     }
     .btn {  
       background: #79c691;
-      padding: 15px 50px 15px 15px;
+      padding: 15px 40px 15px 15px;
       text-transform: capitalize;
       text-decoration: none;
       font-family: 'Helvetica Neue', Helvetica, Arial;
@@ -58,27 +59,19 @@
       position: relative;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 169px 16px;
+      background-position: 163px 16px;
     }
     .btn span {
       border-left: 2px solid #55b873;
-      height: 51px;
-      margin-top: -15px;
-      margin-left: 9px;
-      position: absolute;
     }
     .btn:hover {  
       background: #67bf82;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 169px 16px;
+      background-position: 163px 16px;
     }
     .btn:hover span {
       border-left: 2px solid #48ac67;
-      height: 51px;
-      margin-top: -15px;
-      margin-left: 9px;
-      position: absolute;
     }
     </style>
 
@@ -98,7 +91,7 @@
     <p><strong>What's this all about, eh?</strong></p>
     <p>I'm moving to London to build out a presence for <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a>, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
-    <a class="btn" href="mailto:pcbo@jobbox.io?subject=Booking @pcbo">Book Pedro Today <span>&nbsp;</span></a>
+    <a class="btn" target="_blank" href="https://calendly.com/pcbo">Book Pedro Today&nbsp;<span></span></a>
   </div>
   </body>
 </html>
