--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hire Pedro Oliveira</title>
+    <title>Improve your tech hiring process and source great talent</title>
 
     <link href='http://fonts.googleapis.com/css?family=Muli:400' rel='stylesheet' type='text/css'>
 
@@ -46,7 +46,7 @@
     }
     .btn {  
       background: #79c691;
-      padding: 15px 40px 15px 15px;
+      padding: 15px 40px 15px 0;
       text-transform: capitalize;
       text-decoration: none;
       font-family: 'Helvetica Neue', Helvetica, Arial;
@@ -59,7 +59,7 @@
       position: relative;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 163px 16px;
+      background-position: 162px 16px;
     }
     .btn span {
       border-left: 2px solid #55b873;
@@ -68,7 +68,7 @@
       background: #67bf82;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 163px 16px;
+      background-position: 162px 16px;
     }
     .btn:hover span {
       border-left: 2px solid #48ac67;
@@ -86,12 +86,12 @@
     <img src="pedro.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
     <big>Pedro Oliveira</big>
-    <p class="pedro-title">Co-Founder JOBBOX.io</p>
+    <p class="pedro-title">Co-Founder <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a></p>
     <em><h2>Improve your tech hiring process <br> and source great talent</h2></em>
     <p><strong>What's this all about, eh?</strong></p>
     <p>I'm moving to London to build out a presence for <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a>, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
-    <a class="btn" target="_blank" href="https://calendly.com/pcbo">Book Pedro Today&nbsp;<span></span></a>
+    <a class="btn" target="_blank" href="https://calendly.com/pcbo">&nbsp;&nbsp;Book Pedro Today&nbsp;<span></span></a>
   </div>
   </body>
 </html>
