--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       position: relative;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 162px 16px;
+      background-position: 95% 16px;
     }
     .btn span {
       border-left: 2px solid #55b873;
@@ -68,7 +68,7 @@
       background: #67bf82;
       background-image: url('icon.png');
       background-repeat: no-repeat;
-      background-position: 162px 16px;
+      background-position: 95% 16px;
     }
     .btn:hover span {
       border-left: 2px solid #48ac67;
