meta tags, favicon and social links added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <title>Improve your tech hiring process and source great talent</title>
-
+    <meta name="description" content="I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
+    <link rel="JOBBOX.io" href="https://plus.google.com/+JOBBOXio/" />
+    <meta property="og:image" content="http://hirepedro.jobbox.io/mockup.jpg" />
     <link href='http://fonts.googleapis.com/css?family=Muli:400' rel='stylesheet' type='text/css'>
-
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="http://hirepedro.jobbox.io">
+    <meta name="twitter:title" content="Improve your tech hiring process and source great talent">
+    <meta name="twitter:description" content="I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
+    <meta name="twitter:image" content="http://hirepedro.jobbox.io/mockup.jpg">
     <style>
     html {
       min-height: 100%;
@@ -39,7 +45,7 @@
       margin: 0 auto;
       max-width: 600px;
       margin-bottom: 60px;
-      padding-top: 2em;
+      padding-top: 1em;
     }
     .pedro-title {
       margin-top: 0;
@@ -86,6 +92,7 @@
     <img src="pedro.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
     <big>Pedro Oliveira</big>
+    <p><small><a href="https://twitter.com/pcbo" target="_blank">twitter</a> / <a href="https://uk.linkedin.com/in/pcboliveira" target="_blank">linkedin</a></small></p>
     <p class="pedro-title">Co-Founder <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a></p>
     <em><h2>Improve your tech hiring process <br> and source great talent</h2></em>
     <p><strong>What's this all about, eh?</strong></p>
