--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     img {
       margin: 0 auto;
-      height: 180px;
+      height: 170px;
       margin-top: 25px;
     }
     h1 {
@@ -79,6 +79,9 @@
     .btn:hover span {
       border-left: 2px solid #48ac67;
     }
+    .social {
+      margin: 0 auto;
+    }
     </style>
 
 
@@ -92,7 +95,7 @@
     <img src="pedro.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
     <big>Pedro Oliveira</big>
-    <p><small><a href="https://twitter.com/pcbo" target="_blank">twitter</a> / <a href="https://uk.linkedin.com/in/pcboliveira" target="_blank">linkedin</a></small></p>
+    <p class="social"><small><a href="https://twitter.com/pcbo" target="_blank">twitter</a> / <a href="https://uk.linkedin.com/in/pcboliveira" target="_blank">linkedin</a></small></p>
     <p class="pedro-title">Co-Founder <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a></p>
     <em><h2>Improve your tech hiring process <br> and source great talent</h2></em>
     <p><strong>What's this all about, eh?</strong></p>
