--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       margin-bottom: 60px;
     }
     .pedro-title {
-      margin-top: 0;
+      margin-top: 3px;
     }
     .btn {  
       background: #79c691;
@@ -80,6 +80,7 @@
     }
     .social {
       margin: 0 auto;
+      line-height: 11px;
     }
     </style>
 
