--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="container">
     <img src="pedro.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
-    <small>as featured in <a href="http://blog.jobbox.io/landing-in-london-with-a-human-touch/" target="_blank">JOBBOX.io Blog</a></small>
+    <small class="more-space">as featured in <a href="http://blog.jobbox.io/landing-in-london-with-a-human-touch/" target="_blank">JOBBOX.io Blog</a></small><br />
     <big>Pedro Oliveira</big>
     <p class="social"><small><a href="https://twitter.com/pcbo" target="_blank">twitter</a> / <a href="https://uk.linkedin.com/in/pcboliveira" target="_blank">linkedin</a></small></p>
     <p class="pedro-title">Co-Founder <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a></p>
