--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       margin-top: 3px;
     }
     .more-space {
-      margin-bttom: 10px;
+      margin-bottom: 10px;
+      margin-top: 0;
     }
     .btn {  
       background: #79c691;
@@ -108,7 +109,7 @@
   <div class="container">
     <img src="pedro.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
-    <small class="more-space">as featured in <a href="http://blog.jobbox.io/landing-in-london-with-a-human-touch/" target="_blank">JOBBOX.io Blog</a></small><br />
+    <p class="more-space"><small>as featured in <a href="http://blog.jobbox.io/landing-in-london-with-a-human-touch/" target="_blank">JOBBOX.io Blog</a></small></p>
     <big>Pedro Oliveira</big>
     <p class="social"><small><a href="https://twitter.com/pcbo" target="_blank">twitter</a> / <a href="https://uk.linkedin.com/in/pcboliveira" target="_blank">linkedin</a></small></p>
     <p class="pedro-title">Co-Founder <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a></p>
