line-height: 0.8em;

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     h1 {
       text-transform: uppercase;
       margin-bottom: 0;
+      line-height: 0.8em;
     }
     h1, h2, h3, big {
       font-family: 'Muli', Helvetica, Arial;
