change jobbox to landing.jobs

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta property="og:image" content="http://hirepedro.jobbox.io/mockup.jpg" />
     <link href='http://fonts.googleapis.com/css?family=Muli:400' rel='stylesheet' type='text/css'>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="http://hirepedro.jobbox.io">
+    <meta name="twitter:url" content="http://hirepedro.landing.jobs">
     <meta name="twitter:title" content="Improve your tech hiring process and source great talent">
     <meta name="twitter:description" content="I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
-    <meta name="twitter:image" content="http://hirepedro.jobbox.io/mockup.jpg">
+    <meta name="twitter:image" content="http://hirepedro.landing.jobs/mockup.jpg">
     <style>
     html {
       min-height: 100%;
@@ -110,13 +110,13 @@
   <div class="container">
     <img src="pedro.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
-    <p class="more-space"><small>as featured in <a href="http://blog.jobbox.io/landing-in-london-with-a-human-touch/" target="_blank">JOBBOX.io Blog</a></small></p>
+    <p class="more-space"><small>as featured in <a href="http://blog.landing.jobs/landing-in-london-with-a-human-touch/" target="_blank">Landing.jobs Blog</a></small></p>
     <big>Pedro Oliveira</big>
     <p class="social"><small><a href="https://twitter.com/pcbo" target="_blank">twitter</a> / <a href="https://uk.linkedin.com/in/pcboliveira" target="_blank">linkedin</a></small></p>
-    <p class="pedro-title">Co-Founder <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a></p>
+    <p class="pedro-title">Co-Founder <a href="https://www.landing.jobs/" target="_blank">Landing.jobs</a></p>
     <em><h2>Improve your tech hiring process <br> and source great talent</h2></em>
     <p><strong>What's this all about, eh?</strong></p>
-    <p>I'm moving to London to build out a presence for <a href="https://www.jobbox.io/" target="_blank">JOBBOX.io</a>, and want to roll up my sleeves and understand what's really happening on the ground.</p>
+    <p>I'm moving to London to build out a presence for <a href="https://www.landing.jobs/" target="_blank">Landing.jobs</a>, and want to roll up my sleeves and understand what's really happening on the ground.</p>
     <p>I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.</p>
     <a class="btn" target="_blank" href="https://calendly.com/pcbo">&nbsp;&nbsp;Book Pedro Today&nbsp;<span></span></a>
   </div>
