change colors and pictures

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
       font-family: 'Muli', Helvetica, Arial;
     }
     a {
-      color: #79c691;
+      color: #3ABEB1;
       text-decoration: none;
+    }
+    a:hover {
+      color: #31A196;
     }
     .container {
       margin: 0 auto;
@@ -56,7 +59,7 @@
       margin-top: 0;
     }
     .btn {  
-      background: #79c691;
+      background: #3ABEB1;
       padding: 15px 40px 15px 0;
       text-transform: capitalize;
       text-decoration: none;
@@ -73,16 +76,17 @@
       background-position: 95% 16px;
     }
     .btn span {
-      border-left: 2px solid #55b873;
+      border-left: 2px solid #31A1B6;
     }
     .btn:hover {  
-      background: #67bf82;
+      background: #31A196;
       background-image: url('icon.png');
       background-repeat: no-repeat;
       background-position: 95% 16px;
+      color: white;
     }
     .btn:hover span {
-      border-left: 2px solid #48ac67;
+      border-left: 2px solid #2B8EA1;
     }
     .social {
       margin: 0 auto;
@@ -108,7 +112,7 @@
   </head>
   <body>
   <div class="container">
-    <img src="pedro.png" alt="Pedro Carmo">
+    <img src="pedro1.png" alt="Pedro Carmo">
     <h1>Entrepreneur in Residence</h1>
     <p class="more-space"><small>as featured in <a href="http://blog.landing.jobs/landing-in-london-with-a-human-touch/" target="_blank">Landing.jobs Blog</a></small></p>
     <big>Pedro Oliveira</big>
