--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <title>Improve your tech hiring process and source great tech talent</title>
-    <meta name="description" content="I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
+    <meta name="description" content="I'll work from your office for a few days and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
     <link rel="JOBBOX.io" href="https://plus.google.com/+JOBBOXio/" />
     <meta property="og:image" content="http://hirepedro.jobbox.io/mockup.jpg" />
     <link href='http://fonts.googleapis.com/css?family=Muli:400' rel='stylesheet' type='text/css'>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://hirepedro.landing.jobs">
     <meta name="twitter:title" content="Improve your tech hiring process and source great tech talent">
-    <meta name="twitter:description" content="I'll work from your office for two weeks and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
+    <meta name="twitter:description" content="I'll work from your office for a few days and be on hand to help you find the best European tech talent through our tech hiring marketplace and improve your hiring processes.">
     <meta name="twitter:image" content="http://hirepedro.landing.jobs/mockup.jpg">
     <style>
     html {
@@ -121,7 +121,7 @@
     <em><h2>Improve your tech hiring process <br> and source great tech talent</h2></em>
     <p><strong>What's this all about, eh?</strong></p>
     <p>I've moved to London to build out a presence for <a href="https://www.landing.jobs/" target="_blank">Landing.jobs</a>, and want to roll up my sleeves and understand what's really happening on the ground.</p>
-    <p>I'll work from your office for two weeks and be on hand to help you find the best tech talent through our tech hiring marketplace and improve your hiring processes.</p>
+    <p>I'll work from your office for a few days and be on hand to help you find the best tech talent through our tech hiring marketplace and improve your hiring processes.</p>
     <a class="btn" target="_blank" href="https://calendly.com/pcbo">&nbsp;&nbsp;Book Pedro Today&nbsp;<span></span></a>
   </div>
   </body>
